syntax = "proto3";

option go_package = "github.com/juanjoss/url-service/handlers/grpc/qrgen";

package qrgen;

service QrGenerator {
    rpc GenerateQR (QrGenRequest) returns (QrImage) {};
}

message QrGenRequest {
    string source = 1;
}

message QrImage {
    bytes barcode = 1;
}